--- a/site/index.html
+++ b/site/index.html
@@ -22,8 +22,8 @@
           <li><a href="#">Accueil</a></li>
           <li><a href="#equipe">Équipe</a></li>
           <li><a href="#projets">Projets</a></li>
-          <!-- <li><a href="#">Services</a></li> -->
           <li><a href="#contact">Contact</a></li>
+           <li><a href="commentaires.php">Commentaires</a></li>
         </ul>
       </nav>
     </header>
